tests/multi_return_destructure_arity_bad.stderr
tests/multi_return_destructure_arity_bad.sl:7:2: error: SL2005: call arity mismatch
