tests/multi_return_destructure_arity_bad.sl
fn pair() (uint, uint) {
	return 1, 2
}

fn main() {
	var a, b, c = pair()
	_ = a
	_ = b
	_ = c
}
